# ff_player

./: CMakeLists.txt  image_transformat.cpp  image_transformat.h  input_thread.cpp  input_thread.h  main.cpp  openal_audio_render.cpp  openal_audio_render.h  opengl_video_render.cpp  opengl_video_render.h  pcm_transformat.cpp  pcm_transformat.h  sync_queue.cpp  sync_queue.h  video_player.cpp  video_player.h  video_player_thread.cpp  video_player_thread.h
assets/: mac_fragment_shader.frag  mac_vertex_shader.vsh  render.qrc  win_fragment_shader.fsh  win_vertex_shader.vsh
cmake/modules/: FindFFmpeg.cmake  FindOpenAL.cmake
